apps/flaresolverr/kustomization/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flaresolverr-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: flaresolverr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prowlarr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: jellyseerr
